чистый Spring MVC с фильтром сервлетов

--- a/src/main/resources/config.properties
+++ b/src/main/resources/config.properties
@@ -11,11 +11,11 @@ hibernate.connection.driver_class=com.mysql.cj.jdbc.Driver
 hibernate.connection.characterEncoding=utf8
 hibernate.connection.charSet=utf8
 hibernate.connection.useUnicode=true
-hibernate.connection.url=jdbc:mysql://localhost:3306/users
+hibernate.connection.url=jdbc:mysql://localhost:3306/users?characterEncoding=utf8
 hibernate.connection.username=root
 hibernate.connection.password=Qwerty3366
 hibernate.show_sql=true
-hibernate.hbm2ddl.auto=validate
+hibernate.hbm2ddl.auto=create
 adminName=admin
 adminPass=hard
 adminEmail=adm@truemail.com
