--- a/pom.xml
+++ b/pom.xml
@@ -4,11 +4,13 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
 
-    <groupId>JavaMentor</groupId>
-    <artifactId>Solo4</artifactId>
+    <groupId>JavaMentor1</groupId>
+    <artifactId>Solo5</artifactId>
     <version>1.0-SNAPSHOT</version>
     <packaging>war</packaging>
-
+    <properties>
+        <failOnMissingWebXml>false</failOnMissingWebXml>
+    </properties>
     <build>
         <plugins>
             <plugin>
