--- a/src/main/resources/config.properties
+++ b/src/main/resources/config.properties
@@ -15,8 +15,8 @@ hibernate.connection.url=jdbc:mysql://localhost:3306/users?characterEncoding=utf
 hibernate.connection.username=root
 hibernate.connection.password=Qwerty3366
 hibernate.show_sql=true
-hibernate.hbm2ddl.auto=create
+hibernate.hbm2ddl.auto=validate
 adminName=admin
-adminPass=hard
+adminPass=$2a$10$5Z/4e07l426/tyrYRSpfmevji5NNYLBthCyFLG7qpCKJcf7TqukQS
 adminEmail=adm@truemail.com
 adminAge=999
